# GOIT-Python_Web-HW-11

./: README.md  main.py  pyproject.toml
migrations/versions/: 2389decc0d7d_init.py
src/: schemas.py
src/conf/: config.ini
src/database/: models.py
src/routes/: contacts.py
